--- a/Tikki_project/accounts/templates/accounts/signup.html
+++ b/Tikki_project/accounts/templates/accounts/signup.html
@@ -163,10 +163,44 @@
                                             <label for="businessname">Business/Company Name</label>
                                             <input type="text" class="form-control" name="businessname" placeholder="The name of your company..." required="">
                                         </div>
-
+                                        <div class="form-group">
+                                            <label for="phone">Phone Number</label>
+                                            <input type="text" class="form-control" name="phone" placeholder="Telephone number" required="">
+                                        </div>
                                         <div class="form-group">
                                             <label for="email">Email</label>
                                             <input type="email" class="form-control" name="email" placeholder="Email - business or personal" required="">
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label for="country">Country</label><br>
+                                            <select name="countries" id="countries" style="height: 2rem;">                                               
+                                                <option value="">Select a country</option>
+                                                <option value="us">United States of America</option>
+                                                <option value="ng">Nigeria</option>
+                                                <option value="gb">Great Britain</option>
+                                                <option value="cn">China</option>
+                                                <option value="gn">Ghana</option>
+                                                <option value="ke">Kenya</option>
+                                                <option value="nl">The Netherlands</option>
+                                                <option value="is">Israel</option>
+
+                                            </select>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label for="state">State/Province</label>
+                                            <input type="text" class="form-control" name="state" placeholder="State or province" required="">
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label for="city">City</label>
+                                            <input type="text" class="form-control" name="city" placeholder="City" required="">
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label for="zipcode">Zipcode</label>
+                                            <input type="text" class="form-control" name="zipcode" placeholder="Zipcode" required="">
                                         </div>
                                         
                                         <div class="form-group">
@@ -212,9 +246,9 @@
                                             </select>
                                         </div>
 
-                                        <div class="form-group">
+                                        <!-- <div class="form-group">
                                             <textarea class="form-control" name="message" rows="8" placeholder="Message"></textarea>
-                                        </div>
+                                        </div> -->
 
                                         <div class="form-group alert alert-info">
                                             <input type="checkbox" name="consent"> By Signing up you are agreeing to Tikki's customer agreement and  
